--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
     "eslint": "^8.15.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "nodemon": "^2.0.16",
+    "nodemon": "^1.4.1",
     "prettier": "^2.6.2"
   },
   "dependencies": {
+    "@hapi/boom": "^10.0.0",
     "express": "^4.18.1",
     "faker": "^5.5.3"
   }
